# violoop-capturer-rk

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  build_rk3576.sh  package.sh
.github/workflows/: build-release.yml
package/DEBIAN/: control  postinst  prerm
scripts/: build.sh  build_1.sh
src/: args.c  main.c  utils.c  utils.h  video.c
tests/: hw_venc_test.c  hw_video_test.c  unit_args_test.c  unit_socket_test.c  unit_utils_test.c  unit_video_test.c
